# InvestmentAssistant

./: .env.example  .gitignore  README.md  android_server.py  package-lock.json  package.json  pyproject.toml  tmp_market.json
.github/workflows/: release.yml
None/: chroma.sqlite3
android_backend/: __init__.py  chat.py  market.py  news.py
backend/: config.py  investment-backend.spec  launcher.py  main.py  mcp_config.yaml  runtime_paths.py
backend/core/: event_bus.py  scheduler.py
backend/models/: chat.py  market.py  news.py
backend/routers/: chat.py  history.py  market.py  news.py  settings.py  ws.py
backend/services/: agent_tools.py  chat_service.py  history_service.py  market_service.py  mcp_manager.py  news_service.py  rag_service.py  skills_service.py
data/rag_db/: chroma.sqlite3
frontend/: capacitor.config.ts  dev.mjs  package-lock.json  package.json
frontend/android/: build.gradle
frontend/android/app/: build.gradle
frontend/src/: App.tsx  runtime.ts
frontend/src/api/: chat.ts  client.ts  history.ts  market.ts  news.ts  settings.ts
frontend/src/components/: SetupWizard.tsx
frontend/src/hooks/: useChat.ts  useMarketData.ts  useNews.ts  useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  MarketPage.tsx  NewsPage.tsx  SettingsPage.tsx  SetupPage.tsx
frontend/src/store/: index.ts
frontend/src/styles/: global.css
scripts/: build-android.sh  build-sidecar.ps1  build-sidecar.sh  install-android.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+25 files in other folders)
