[project]
name = "investment-assistant"
version = "0.1.0"
description = "Market Investment Assistant with real-time data and AI chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34",
    "websockets>=13",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "requests>=2.31",
    "yfinance>=0.2.48",
    "langchain>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langgraph>=1.0.1",
    "langchain-tavily>=0.2.17",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "akshare>=1.18.64",
    "feedparser>=6.0.12",
    "chromadb>=1.5.9",
    "langchain-chroma>=0.2.6",
    "langchain-mcp-adapters>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
